--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ maintenance = { status = "actively-developed" }
 name = "firestore"
 path = "src/lib.rs"
 
+[features]
+timestamp = ["dep:prost-types"]
+default = []
+
 [dependencies]
 tracing = "0.1"
 gcloud-sdk = { version = "0.18", features = ["google-firestore-v1"] }
@@ -37,6 +41,7 @@ futures-util = "0.3"
 lazy_static = "1.4"
 chrono = { version = "0.4", features = ["serde"] }
 async-trait = "0.1"
+prost-types = {version = "0.11.0", optional = true}
 
 [dev-dependencies]
 cargo-husky = { version = "1.5", default-features = false, features = ["run-for-all", "prepush-hook", "run-cargo-fmt"] }
